--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Page Title</title>
+  <title>Fresh food for dogs and cats, delivered - NomNomNow</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script src="main.js"></script>
+  <link rel="stylesheet" type="text/css" href="app.css" />
+  <script src="app.js"></script>
 </head>
 
 <body>
-
+  <nav class="navbar">
+    <a class="navbar-logo" href="https://www.nomnomnow.com/">
+      <img src="logo_main.svg" alt="Fresh dog food delivery, best dog food - NomNomNow">
+    </a>
+    <ul class="navbar-menu">
+      <li></li>
+    </ul>
+  </nav>
 </body>
 
 </html>
