Add basic navbar menu and styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Fresh food for dogs and cats, delivered - NomNomNow</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="app.css" />
   <script src="app.js"></script>
 </head>
@@ -16,7 +17,24 @@
       <img src="logo_main.svg" alt="Fresh dog food delivery, best dog food - NomNomNow">
     </a>
     <ul class="navbar-menu">
-      <li></li>
+      <li>
+        Dogs
+        <span class="arrow">▾</span>
+      </li>
+      <li>
+        Cats
+        <span class="arrow">▾</span>
+      </li>
+      <li>
+        Learn
+        <span class="arrow">▾</span>
+      </li>
+      <li>Log in</li>
+      <li>
+        <a href="https://www.nomnomnow.com/profile" class="trial-button">
+          Start trial
+        </a>
+      </li>
     </ul>
   </nav>
 </body>
