Add dogs dropdown content and basic styling

--- a/index.html
+++ b/index.html
@@ -17,21 +17,56 @@
       <img src="logo_main.svg" alt="Fresh dog food delivery, best dog food - NomNomNow">
     </a>
     <ul class="navbar-menu">
-      <li>
-        Dogs
-        <span class="arrow">▾</span>
+      <li class="dropdown">
+        <a>
+          Dogs
+          <span class="arrow">▾</span>
+        </a>
+        <ul class="dropdown-content">
+          <li>
+            <a href="https://www.nomnomnow.com/fresh-dog-food-recipes">
+              Recipes
+            </a>
+          </li>
+          <li>
+            <a href="https://www.nomnomnow.com/site/variety-pack">
+              Variety Pack
+            </a>
+          </li>
+          <li>
+            <a href="https://www.nomnomnow.com/site/products/dog-treats/">
+              Treats
+            </a>
+          </li>
+          <li>
+            <a href="https://www.nomnomnow.com/site/products/dog-probiotics/">
+              Probiotics
+            </a>
+          </li>
+          <li>
+            <a href="https://www.nomnomnow.com/site/products/microbiome/">
+              Microbiome
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li class="dropdown">
+        <a>
+          Cats
+          <span class="arrow">▾</span>
+        </a>
+      </li>
+      <li class="dropdown">
+        <a>
+          Learn
+          <span class="arrow">▾</span>
+        </a>
       </li>
       <li>
-        Cats
-        <span class="arrow">▾</span>
+        <a href="">Log in</a>
       </li>
       <li>
-        Learn
-        <span class="arrow">▾</span>
-      </li>
-      <li>Log in</li>
-      <li>
-        <a href="https://www.nomnomnow.com/profile" class="trial-button">
+        <a href="https://www.nomnomnow.com/profile" id="trial-button">
           Start trial
         </a>
       </li>
