Add dropdown content for dogs and learn

--- a/index.html
+++ b/index.html
@@ -55,15 +55,49 @@
           Cats
           <span class="arrow">▾</span>
         </a>
+        <ul class="dropdown-content">
+          <li>
+            <a href="https://www.nomnomnow.com/fresh-cat-food-recipes">
+              Recipes
+            </a>
+          </li>
+          <li>
+            <a href="https://www.nomnomnow.com/site/products/dog-treats/?pet_type=CAT">
+              Treats
+            </a>
+          </li>
+          <li>
+            <a href="https://www.nomnomnow.com/site/products/microbiome/?pet_type=CAT">
+              Microbiome
+            </a>
+          </li>
+        </ul>
       </li>
       <li class="dropdown">
         <a>
           Learn
           <span class="arrow">▾</span>
         </a>
+        <ul class="dropdown-content">
+          <li>
+            <a href="https://www.nomnomnow.com/site/how-it-works">
+              Our approach
+            </a>
+          </li>
+          <li>
+            <a href="https://www.nomnomnow.com/learn/success-stories">
+              Success stories
+            </a>
+          </li>
+          <li>
+            <a href="https://www.nomnomnow.com/learn">
+              Articles
+            </a>
+          </li>
+        </ul>
       </li>
       <li>
-        <a href="">Log in</a>
+        <a href="https://www.nomnomnow.com/a/login?redirect_url=https%3A%2F%2Fwww.nomnomnow.com%2Fa%2F">Log in</a>
       </li>
       <li>
         <a href="https://www.nomnomnow.com/profile" id="trial-button">
