Add description and styling

--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@
       </li>
     </ul>
   </nav>
+
+  <p class="navbar-description">The base of the navbar was made standard with a fixed position at the top. The buttons
+    and links were replicated to match the styling of the original website. The majority of the navbar was built with
+    only HTML and CSS. JavaScript was only needed to optimize for smaller screens. I used JS to alter class names for
+    styling purposes when the menu icon was clicked. Lastly, I slowed down the ease-out transitions on the dropdown
+    links on smaller screens. On the original site, when the user hovers down from Dogs to Cats, I felt 0.2s ease-out
+    collapses the Dogs dropdown too fast for the user to keep the next dropdown content open.
+  </p>
   <script src="app.js"></script>
 </body>
 
