Add dropdown form fields of calculator

--- a/index.html
+++ b/index.html
@@ -121,6 +121,32 @@
     links on smaller screens. On the original site, when the user hovers down from Dogs to Cats, I felt 0.2s ease-out
     collapses the Dogs dropdown too fast for the user to keep the next dropdown content open.
   </p>
+
+  <section class="calculator">
+    <header>
+      <h1>Dog food comparison calculator</h1>
+    </header>
+    <form class="calculator-form">
+      <fieldset>
+        <h2>Name of dog food brand</h2>
+        <select name="other-brands">
+          <option value="taste-wild">Taste of the Wild - High Prairie</option>
+          <option value="diamond-naturals">Diamond Naturals - Beef Meal & Rice</option>
+          <option value="blue-buffalo">Blue Buffalo Freedom - Chicken</option>
+        </select>
+      </fieldset>
+      <fieldset>
+        <h2>Compare with NomNomNow</h2>
+        <select name="nnn-recipes">
+          <option value="Porkalicious Potluck">Porkalicious Potluck</option>
+          <option value="Heartland Beef Mash">Heartland Beef Mash</option>
+          <option value="Chicken Chow-Wow">Chicken Chow-Wow</option>
+          <option value="Tasty Turkey Fare">Tasty Turkey Fare</option>
+        </select>
+      </fieldset>
+    </form>
+  </section>
+
   <script src="app.js"></script>
 </body>
 
