Add basic structure of calculator results section

--- a/index.html
+++ b/index.html
@@ -145,6 +145,39 @@
         </select>
       </fieldset>
     </form>
+    <div class="results">
+      <section class="brand-results">
+        <h2 class="gray">Blue Freedom</h2>
+        <div class="results-sections">
+          <h3 class="gray">Protein</h3>
+          <h4 class="gray">223</h4>
+        </div>
+        <div class="results-sections">
+          <h3 class="gray">Fat</h3>
+          <h4 class="gray">1161</h4>
+        </div>
+        <div class="results-sections">
+          <h3 class="gray">Carbohydrate</h3>
+          <h4 class="gray">60</h4>
+        </div>
+      </section>
+      <section class="nnn-results">
+        <img class="utensils" src="logo_utensils.svg" alt="utensils">
+        <h2>Porkalicious Potluck</h2>
+        <div class="results-sections">
+          <h3 class="gray">Protein *</h3>
+          <h4 class="nnn-protein">200</h4>
+        </div>
+        <div class="results-sections">
+          <h3 class="gray">Fat</h3>
+          <h4 class="nnn-fat">1000</h4>
+        </div>
+        <div class="results-sections">
+          <h3 class="gray">Carbohydrate</h3>
+          <h4 class="nnn-carb">50</h4>
+        </div>
+      </section>
+    </div>
   </section>
 
   <script src="app.js"></script>
