Amend brand dropdown values to cohere with javascript functions

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
       <fieldset>
         <h2>Name of dog food brand</h2>
         <select name="other-brands">
-          <option value="taste-wild">Taste of the Wild - High Prairie</option>
-          <option value="diamond-naturals">Diamond Naturals - Beef Meal & Rice</option>
-          <option value="blue-buffalo">Blue Buffalo Freedom - Chicken</option>
+          <option value="tasteWild">Taste of the Wild - High Prairie</option>
+          <option value="diamondNaturals">Diamond Naturals - Beef Meal & Rice</option>
+          <option value="blueFreedom">Blue Buffalo Freedom - Chicken</option>
         </select>
       </fieldset>
       <fieldset>
@@ -150,15 +150,15 @@
         <h2 class="gray">Blue Freedom</h2>
         <div class="results-sections">
           <h3 class="gray">Protein</h3>
-          <h4 class="gray">223</h4>
+          <h4 class="brand-protein gray">223</h4>
         </div>
         <div class="results-sections">
           <h3 class="gray">Fat</h3>
-          <h4 class="gray">1161</h4>
+          <h4 class="brand-fat gray">1161</h4>
         </div>
         <div class="results-sections">
           <h3 class="gray">Carbohydrate</h3>
-          <h4 class="gray">60</h4>
+          <h4 class="brand-carb gray">60</h4>
         </div>
       </section>
       <section class="nnn-results">
