Add default values for calculator

--- a/index.html
+++ b/index.html
@@ -147,18 +147,18 @@
     </form>
     <div class="results">
       <section class="brand-results">
-        <h2 class="gray">Blue Freedom</h2>
+        <h2 class="brand-name gray">Taste of the Wild - High Prairie</h2>
         <div class="results-sections">
           <h3 class="gray">Protein</h3>
-          <h4 class="brand-protein gray">223</h4>
+          <h4 class="brand-protein gray">90</h4>
         </div>
         <div class="results-sections">
           <h3 class="gray">Fat</h3>
-          <h4 class="brand-fat gray">1161</h4>
+          <h4 class="brand-fat gray">51</h4>
         </div>
         <div class="results-sections">
           <h3 class="gray">Carbohydrate</h3>
-          <h4 class="brand-carb gray">60</h4>
+          <h4 class="brand-carb gray">72</h4>
         </div>
       </section>
       <section class="nnn-results">
