Rename values on nnn dropdown options

--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
       <fieldset>
         <h2>Compare with NomNomNow</h2>
         <select name="nnn-recipes">
-          <option value="Porkalicious Potluck">Porkalicious Potluck</option>
-          <option value="Heartland Beef Mash">Heartland Beef Mash</option>
-          <option value="Chicken Chow-Wow">Chicken Chow-Wow</option>
-          <option value="Tasty Turkey Fare">Tasty Turkey Fare</option>
+          <option value="porkaliciousPotluck">Porkalicious Potluck</option>
+          <option value="heartlandBeefMash">Heartland Beef Mash</option>
+          <option value="chickenChowWow">Chicken Chow-Wow</option>
+          <option value="tastyTurkeyFare">Tasty Turkey Fare</option>
         </select>
       </fieldset>
     </form>
@@ -163,7 +163,7 @@
       </section>
       <section class="nnn-results">
         <img class="utensils" src="logo_utensils.svg" alt="utensils">
-        <h2>Porkalicious Potluck</h2>
+        <h2 class="nnn-name">Porkalicious Potluck</h2>
         <div class="results-sections">
           <h3 class="gray">Protein *</h3>
           <h4 class="nnn-protein">200</h4>
