Add nutrients-direction and results footer

--- a/index.html
+++ b/index.html
@@ -145,38 +145,53 @@
         </select>
       </fieldset>
     </form>
-    <div class="results">
-      <section class="brand-results">
-        <h2 class="brand-name gray">Taste of the Wild - High Prairie</h2>
-        <div class="results-sections">
-          <h3 class="gray">Protein</h3>
-          <h4 class="brand-protein gray">90</h4>
-        </div>
-        <div class="results-sections">
-          <h3 class="gray">Fat</h3>
-          <h4 class="brand-fat gray">51</h4>
-        </div>
-        <div class="results-sections">
-          <h3 class="gray">Carbohydrate</h3>
-          <h4 class="brand-carb gray">72</h4>
-        </div>
-      </section>
-      <section class="nnn-results">
-        <img class="utensils" src="logo_utensils.svg" alt="utensils">
-        <h2 class="nnn-name">Porkalicious Potluck</h2>
-        <div class="results-sections">
-          <h3 class="gray">Protein *</h3>
-          <h4 class="nnn-protein">200</h4>
-        </div>
-        <div class="results-sections">
-          <h3 class="gray">Fat</h3>
-          <h4 class="nnn-fat">1000</h4>
-        </div>
-        <div class="results-sections">
-          <h3 class="gray">Carbohydrate</h3>
-          <h4 class="nnn-carb">50</h4>
-        </div>
-      </section>
+    <div class="nutrients-direction center-text">
+      <h5 class="gray">See the the nutrient comparison below</h5>
+      <img src="icon_chevron.png" alt="chevron">
+    </div>
+    <div class="results-container">
+      <div class="results">
+        <section class="brand-results">
+          <h2 class="brand-name gray">Taste of the Wild - High Prairie</h2>
+          <div class="results-sections">
+            <h3 class="gray">Protein</h3>
+            <h4 class="brand-protein gray">90</h4>
+          </div>
+          <div class="results-sections">
+            <h3 class="gray">Fat</h3>
+            <h4 class="brand-fat gray">51</h4>
+          </div>
+          <div class="results-sections">
+            <h3 class="gray">Carbohydrate</h3>
+            <h4 class="brand-carb gray">72</h4>
+          </div>
+        </section>
+        <section class="nnn-results">
+          <img class="utensils" src="logo_utensils.svg" alt="utensils">
+          <h2 class="nnn-name">Porkalicious Potluck</h2>
+          <div class="results-sections">
+            <h3 class="gray">Protein *</h3>
+            <h4 class="nnn-protein">75</h4>
+          </div>
+          <div class="results-sections">
+            <h3 class="gray">Fat</h3>
+            <h4 class="nnn-fat">55</h4>
+          </div>
+          <div class="results-sections">
+            <h3 class="gray">Carbohydrate</h3>
+            <h4 class="nnn-carb">77</h4>
+          </div>
+        </section>
+      </div>
+      <footer class="results-footer center-text">
+        <h5>Learn about
+          <a class="nutrients-learn" href="https://www.nomnomnow.com/learn/pet-expert/understanding-dog-food-nutrients">
+            the role of protein, fat, and carbs
+          </a>
+          in a dog's diet.
+        </h5>
+        <h5 class="footer-note gray">* All units above are given in grams per 1000 calories (g/kcal).</h5>
+      </footer>
     </div>
   </section>
 
