Fix direction-text alignment to be centered

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </form>
     <div class="nutrients-direction center-text">
       <img class="arrow-up" src="icon_chevron.png" alt="chevron">
-      <h5 class="direction-text gray">
+      <h5 class="direction-text gray center-text">
         Choose a brand and recipe to get a nutrient comparison
       </h5>
       <img class="arrow-down" src="icon_chevron.png" alt="chevron">
